Fix text alignment for RTL quoted messages (#2980)

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -728,6 +728,7 @@
   font-size: 14px;
   line-height: 18px;
   color: $color-gray-90;
+  text-align: start;
 
   a {
     color: $color-gray-90;
